Changes for 1.3.3.0
* Created new unit attachment, canInvadeOnlyFrom, which determines if a unit can conduct amphibious assaults or if it has to disembark in noncombat. (edwin van der wal)

* Made placements appear as a list, just like moves do, and can now be undone individually. Abstracted undoable moves and placements. (frigoref)


Changes for 1.3.2.2
* Fixed null pointer error in Strong AI sea movement. (veqryn)


Changes for 1.3.2.1
* Added new button to main screen, "Rule Book...", which will open up the user's default web browser and go to the triplea sf page with our future rulebook. (veqryn [Mark Christopher Duncan])

* Updated "unitProduction" so when used in conjunction with "Damage From Bombing Done To Units Instead Of Territories" it sets the allowed number of units to be produced in that territory, thereby finally un-associating the PU production of a territory from the Unit production of a territory.
  Also, updated "production" to automatically set "unitProduction" to be equal. So if you want a different unitProduction value, you must set it after production when attaching to a territory. (veqryn [Mark Christopher Duncan])

* Fixed bug related to territory damage in history panel, as well as a null pointer error for factories on territories with no attachments, and also fixed a bug that was not allowing canProduceUnits units to have same max damage as factory units. (veqryn [Mark Christopher Duncan])

* Added information on number of units being purchased to production panel. Also changed all upgrade/consumes type units to have their names displayed in blue. (veqryn [Mark Christopher Duncan])

* Added tabs option to production panel. (edwin van der wal)

* Fixed bug where upgrades of sea units could be placed same turn as the base unit. (veqryn [Mark Christopher Duncan])

* Fixed bug where air units may not participate in a battle if they had been on an allied carrier that was involved in a battle. (veqryn [Mark Christopher Duncan])
