@@ -1,4 +1,6 @@
 Changes for 1.3.3.0
+* Fixed bugs in canInvadeOnlyFrom. (veqryn)
+
 * Created new unit attachment, canInvadeOnlyFrom, which determines if a unit can conduct amphibious assaults or if it has to disembark in noncombat. (edwin van der wal)
 
 * Made placements appear as a list, just like moves do, and can now be undone individually. Abstracted undoable moves and placements. (frigoref)
